# flipt-client-sdks

./: .gitignore  .mise.toml  .prettierignore  .release-please-manifest.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md  RELEASE.md  data.csv  generate_bindings.sh  go.work  go.work.sum  release-please-config.json  strip_xcframework.sh
.agents/: settings.local.json
.agents/personas/: README.md  ffi-sdk-reviewer.md  rust-engine-reviewer.md  wasm-sdk-reviewer.md
.agents/prompts/: 00-sdk-review-routing.md
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: new_language.yml
.github/images/: architecture-ffi.d2  architecture-wasm-js.d2  architecture-wasm.d2
.github/workflows/: build-engine.yml  ci.yml  claude.yml  issue-health.yml  lint-sdks.yml  lint.yml  (+38 more)
diagrams/: architecture.d2
engine/: flipt_engine.h
flipt-client-browser/: .gitignore  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json  webpack.config.js
flipt-client-csharp/: .gitignore  .mise.toml  README.md  flipt-client.sln
flipt-client-dart/: .gitignore  .mise.toml  README.md  build.yaml  ffigen.yaml  flipt_client.podspec  flipt_client_dart.podspec  flutter_plugin.yaml  pubspec.yaml
flipt-client-dart-android/: .gitignore  .pubignore  README.md  pubspec.yaml
flipt-client-dart-ios/: .gitignore  README.md  ffigen.yaml  pubspec.yaml
flipt-client-flutter/: .gitignore  config.yaml  pubspec.yaml
flipt-client-go/: .gitignore  .mise.toml  CHANGELOG.md  README.md  benchmark_test.go  build.go  build_musl.go  client.go  client_internal_test.go  client_request_test.go  client_test.go  config.go  config_test.go  errors.go  evaluation.go  evaluation_test.go  ext.go  go.mod  go.sum  hook_test.go  models.go  retry.go  retry_test.go  tls.go  types.go  version.go
flipt-client-java/: .gitignore  .mise.toml  README.md  build.gradle  build.musl.gradle  settings.gradle
flipt-client-js/: .eslintrc.cjs  .eslintrc.js  .gitignore  .mise.toml  README.md  engine.wasm.js  eslint.config.cjs  jest.config.js  jest.polyfills.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
flipt-client-kotlin-android/: .editorconfig  .gitignore  .mise.toml  README.md  build.gradle  settings.gradle
flipt-client-kotlin-android/src/main/cpp/: CMakeLists.txt  fliptengine_wrapper.c
flipt-client-kotlin-android/src/main/cpp/include/: flipt_engine.h
flipt-client-node/: .gitignore  CHANGELOG.md  README  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
flipt-client-python/: .gitignore  .mise.toml  CHANGELOG.md  README.md  pyproject.toml  scripts.py
flipt-client-python/flipt_client/: __init__.py  errors.py  models.py
flipt-client-python/flipt_client_python/: __init__.py  models.py
flipt-client-python/tests/: __init__.py  test_flipt_client.py  test_python_version.py
flipt-client-react/: .mise.toml  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
flipt-client-ruby/: .gitignore  .mise.toml  .rubocop.yml  .rubocop_todo.yml  CHANGELOG.md  Gemfile  README.md  flipt-client-ruby.gemspec  loadtest.rb
flipt-client-rust/: Cargo.toml
flipt-client-rust/src/: lib.rs
flipt-client-swift/: .gitignore  .mise.toml  .swiftformat  .swiftlint.yml  Package.swift  README.md
flipt-client-web/: README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
flipt-engine/: CHANGELOG.md  Cargo.toml  README.md  build.rs
flipt-engine-ffi/: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  flipt_engine.h  wrapper.c
flipt-engine-ffi/examples/: evaluation.rs
flipt-engine-ffi/include/: flipt_engine.h
flipt-engine-ffi/src/: evaluator.rs  http.rs  lib.rs  tls.rs
flipt-engine-ffi/src/evaluator/: mod.rs
flipt-engine-ffi/src/http/: streaming.rs
flipt-engine-ffi/src/parser/: http.rs
flipt-engine-ffi/src/testdata/: localhost.crt  localhost.key
flipt-engine-go/: engine.go  errors.go  evaluator.go  evaluator_models.go  evaluator_test.go  go.mod  http.go  http_models.go  http_test.go  mock.go  snapshot.go  snapshot_models.go  snapshot_test.go
flipt-engine-uniffi/: Cargo.toml  build.rs
flipt-engine-uniffi/src/: flipt_engine.udl  lib.rs
flipt-engine-wasm/: CHANGELOG.md  Cargo.toml  README.md
flipt-engine-wasm-js/: CHANGELOG.md  Cargo.toml  README.md
flipt-engine-wasm-js/src/: lib.rs
flipt-engine-wasm/.cargo/: config.toml
flipt-engine-wasm/example/: index.js  package-lock.json  package.json
flipt-engine-wasm/integration/: package-lock.json  package.json
flipt-engine-wasm/integration/spec/: evaluation.spec.js
flipt-engine-wasm/src/: lib.rs
flipt-engine-wasm/src/parser/: mod.rs  static.rs  wasm.rs
flipt-engine-wasm/test/: package-lock.json
flipt-engine-wasm/test/spec/: evaluation.spec.js
flipt-engine/examples/: evaluation.rs  grpc.rs  grps.rs
flipt-engine/lib/evaluation/src/: lib.rs
flipt-engine/lib/evaluation/src/store/: mod.rs
flipt-engine/src/: lib.rs
flipt-engine/src/error/: mod.rs
flipt-engine/src/evaluator/: mod.rs
flipt-engine/src/models/: common.rs  mod.rs  source.rs
flipt-engine/src/parser/: mod.rs
flipt-engine/src/store/: mod.rs  parsers.rs  snapshot.rs
flipt-engine/src/testdata/: state.json
flipt-evaluation/: CHANGELOG.md  Cargo.toml
flipt-evaluation-wasi/: Cargo.toml
flipt-evaluation-wasi/src/: lib.rs
flipt-evaluation-wasi/wit/: host.wit
flipt-evaluation/src/: error.rs  lib.rs  store.rs
flipt-evaluation/src/error/: mod.rs
flipt-evaluation/src/evaluator/: mod.rs  sync.rs
flipt-evaluation/src/http/: mod.rs
flipt-evaluation/src/models/: common.rs  flipt.rs  mod.rs  snapshot.rs  source.rs
flipt-evaluation/src/parser/: http.rs  mod.rs
flipt-evaluation/src/store/: mod.rs
go/: README.md
node/: README.md
python/: README.md
release/: .gitignore  README.md  release.py  release_cli.py  requirements.txt
test/: README.md  go.mod  go.sum  main.go
uniffi-bindgen/: Cargo.toml
(+247 files in other folders)
