[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flipt-client"
version = "0.18.0"
description = "Flipt Client Evaluation SDK"
authors = [ "Flipt Devs <dev@flipt.io>",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/flipt-io/flipt-client-sdks"
[[tool.poetry.include]]
path = "ext/**/*"

[[tool.poetry.include]]
path = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "<3.0"

[tool.poetry.scripts]
test = "scripts:test"

[tool.poetry.group.dev.dependencies]
black = ">=23.11,<26.0"
