[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flipt-client"
version = "1.3.0"
description = "Flipt Client Evaluation SDK"
authors = [ "Flipt Devs <dev@flipt.io>",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/flipt-io/flipt-client-sdks"
[[tool.poetry.include]]
path = "ext/**/*"

[[tool.poetry.include]]
path = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = ">=1.10,<3.0"
packaging = ">=24,<26"

[tool.poetry.group.dev.dependencies]
black = ">=23.11,<26.0"
pytest = "^8.2.0"
