[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flipt-client"
version = "1.4.3"
description = "Flipt Client Evaluation SDK"
authors = [ "Flipt Devs <dev@flipt.io>",]
readme = "README.md"
license = "MIT"
repository = "https://github.com/flipt-io/flipt-client-sdks"
[[tool.poetry.include]]
path = "ext/**/*"

[[tool.poetry.include]]
path = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = ">=1.10,<3.0"
packaging = ">=24,<27"

[tool.poetry.group.dev.dependencies]
black = ">=23.11,<27.0"
pytest = ">=8.2,<10.0"
