[package]
name = "flipt-engine-ffi"
version = "0.1.18"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
description = "Flipt FFI Client Engine"
publish = false

[dependencies]
libc = "0.2.150"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0.63"

[dependencies.flipt-evaluation]
path = "../flipt-evaluation"

[dev-dependencies]
mockall = "0.13.0"
mockito = "1.4.0"

[lib]
name = "fliptengine"
crate-type = ["rlib", "dylib"]
