[package]
name = "flipt-engine-ffi"
version = "0.2.5"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
description = "Flipt FFI Client Engine"
publish = false
repository = "https://github.com/flipt-io/flipt-client-sdks"

[dependencies]
libc = "0.2.150"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures-util = "0.3.30"
native-tls = { version = "0.2", features = ["vendored"] }
futures = "0.3"
thiserror = "2.0.3"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.0"

[dependencies.flipt-evaluation]
path = "../flipt-evaluation"

[dev-dependencies]
mockall = "0.13.0"
mockito = "1.4.0"

[lib]
name = "fliptengine"
crate-type = ["rlib", "dylib", "staticlib"]
