[package]
name = "flipt-engine-ffi"
version = "0.13.0"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
description = "Flipt FFI Client Engine"
publish = false
repository = "https://github.com/flipt-io/flipt-client-sdks"

[lib]
name = "fliptengine"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
libc = { version = "0.2.150", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
reqwest = { version = "0.12.9", features = ["json", "stream", "rustls-tls", "http2"], default-features = false }
http = "1.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "io-util", "net", "time"], default-features = false }
tokio-util = { version = "0.7", features = ["io"], default-features = false }
futures-util = { version = "0.3.30", default-features = false }
futures = { version = "0.3", default-features = false }
thiserror = "2.0.3"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.0"
async-trait = "0.1"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"

[dependencies.flipt-evaluation]
path = "../flipt-evaluation"

[dev-dependencies]
mockall = "0.13.0"
mockito = "1.4.0"

[build-dependencies]
cbindgen = "0.29.0"
