[package]
name = "flipt-engine-wasm-js"
version = "0.2.3"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
description = "Flipt WASM JS Client Engine"
publish = false
repository = "https://github.com/flipt-io/flipt-client-sdks"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.31", features = ["wasmbind"] }

[dependencies.flipt-evaluation]
path = "../flipt-evaluation"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
