[package]
name = "flipt-engine-wasm"
version = "0.2.2"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
description = "Flipt WASM Client Engine"
publish = false
repository = "https://github.com/flipt-io/flipt-client-sdks"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = { version = "0.2.150", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
uuid = { version = "1.14.0", features = ["v4", "js"] }
thiserror = "2.0.3"

[dependencies.flipt-evaluation]
path = "../flipt-evaluation"