[package]
name = "flipt-client-engine"
version = "0.0.3"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"

[dependencies]
libc = "0.2.150"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
uuid = { version = "1.5.0", features = ["v4"] }
crc32fast = "1.3.2"
chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
futures = "0.3"
thiserror = "1.0.50"
openssl = { version = "0.10", features = ["vendored"] }
prost = "0.12"
prost-types = "0.12"
pbjson = "0.6"
pbjson-types = "0.6"
protos = { path = "./gen" }

[build-dependencies]
cbindgen = "0.26.0"
prost-build = "0.12"
pbjson-build = "0.6"

[dev-dependencies]
mockall = "0.11.4"

[lib]
name = "fliptengine"
crate-type = ["rlib", "dylib"]

[profile.release]
strip = true
