[package]
name = "flipt-client-engine"
version = "0.0.3"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"

[dependencies]
libc = "0.2.150"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }

[dependencies.flipt-evaluation]
path = "./lib/evaluation"

[build-dependencies]
cbindgen = "0.26.0"

[dev-dependencies]
mockall = "0.12.1"

[lib]
name = "fliptengine"
crate-type = ["rlib", "dylib"]

[profile.release]
strip = true
