[package]
name = "flipt-evaluation-wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-wasi"

[dependencies]
wit-bindgen = "0.29.0"
serde_json = { version = "1.0.89", features = ["raw_value"] }
flipt-evaluation = { path = "../flipt-evaluation" }