[package]
name = "flipt-evaluation"
version = "0.1.7"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
description = "Flipt Evaluation Library"
publish = false

[lib]
name = "fliptevaluation"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
uuid = { version = "1.5.0", features = ["v4"] }
crc32fast = "1.3.2"
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }
instant = "0.1.12"

[dev-dependencies]
mockall = "0.12.1"
