[package]
name = "flipt-evaluation"
version = "0.3.0"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
description = "Flipt Evaluation Library"
publish = false
repository = "https://github.com/flipt-io/flipt-client-sdks"

[lib]
name = "fliptevaluation"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
crc32fast = "1.3.2"
thiserror = "2.0.3"
chrono = { version = "0.4.31", features = ["serde"] }
web-time = "1.1.0"

[dev-dependencies]
mockall = "0.13.0"
